remove java 24 compatibility